[package]
name = "demo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
tauri = { version = "2.1.0", features = [] }
tauri-plugin-opener = "2.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"